# to-do

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/api/: __init__.py  auth.py  todos.py  users.py
app/api/router/: __init__.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/database/: base.py  init_db.py  session.py
app/database/models/: __init__.py  mixins.py  todo.py  user.py  users.py
app/repositories/: __init__.py  base_repo.py  todo_repo.py  user_repo.py
app/repository/: todo_repo.py
app/router/: auth.py  todo.py
app/schemas/: auth.py  todo.py  user.py
app/security/: jwt.py
app/services/: __init__.py  auth_service.py  todo_services.py  user_services.py
app/utils/: config.py
